# tests-ci

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: auto-pr.yml  ci.yml
tests/: test_main.py
